tests/reject/proof_without_lemma.alg
sort S;
var x : S;
axiom refl x = x;
proof
  x;
qed;
